objects/Risk_Variable_History__c.object
<CustomObject>
    <fields>
        <fullName>Change_Date_Time__c</fullName>
        <label>Change Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Identifier__c</fullName>
        <label>Item Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Variable History</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Risk Variable History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Variable History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>